[holder_country] - add arrow right at the end of the holder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CollezioneEuro</string>
+    <string name="holder_country_arrow_right_contentdescription">Go to details</string>
 </resources>
