--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CollezioneEuro</string>
     <string name="holder_country_arrow_right_contentdescription">Go to details</string>
+    <string name="coin_contentdescription">Coin</string>
 </resources>
