[UIENCHANTMENT_HOME_CARDVIEW] - improve home fragment with cardview instead of list
La lista dei paesi nella schermata home, che dapprima era una lista di stringhe, ora è una lista di cardview disposte su due colonne.
Ogni card view contiene:
1. Nome del paese
2. Immagine della bandiera
3. Indicazioni di quante monete sono possedute per quel paese

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CollezioneEuro</string>
     <string name="holder_country_arrow_right_contentdescription">Go to details</string>
     <string name="coin_contentdescription">Coin</string>
+    <string name="flag_contentdescription">Flag</string>
 </resources>
