[BottomNavigationMenu] - add bottom navigation menu resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="coin_contentdescription">Coin</string>
     <string name="flag_contentdescription">Flag</string>
     <string name="cerca_per_nazione_hint">Cerca per nazione</string>
+    <string name="ce_bottom_navigation_menu_principale">Principale</string>
+    <string name="ce_bottom_navigation_menu_statistiche">Statistiche</string>
 </resources>
