[Coins] - add enlargement of a long-clicked coin
Quando si tiene premuto su una moneta, essa verra vista in grande.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cerca_per_nazione_hint">Cerca per nazione</string>
     <string name="ce_bottom_navigation_menu_principale">Principale</string>
     <string name="ce_bottom_navigation_menu_statistiche">Statistiche</string>
+    <string name="zoomed_coin_contentdescription">Zoomed Coin</string>
 </resources>
