--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="statistic_title_total_value_of_owned_coins">Valore totale delle monete possedute</string>
     <string name="statistic_title_total_owned_coins">Totale monete possedute</string>
     <string name="bandiera_europa_contentdescription">Bandiera Europa</string>
+    <string name="esporta_drawer_main_menu">Esporta</string>
+    <string name="toast_file_salvato_in">File salvato in</string>
 </resources>
