--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -13,4 +13,5 @@
     <string name="esporta_drawer_main_menu">Export</string>
     <string name="importa_drawer_main_menu">Import</string>
     <string name="toast_file_salvato_in">File saved in</string>
+    <string name="ce_bottom_navigation_menu_completati">Complete</string>
 </resources>
